fixed flex-wrap

--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   height: 10vh;
@@ -24,9 +13,7 @@
   color: white;
 }
 .App-header > * {
-  margin: 50px;
-  padding-bottom: 10px;
-  padding-top: 5px;
+  padding: 50px;
 }
 
 img {
@@ -48,4 +35,5 @@ img:active {
 }
 .images > * {
   margin: auto;
+  flex: 1 0 21%;
 }
